--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.1",
+    "exceljs": "^4.4.0",
+    "flowbite": "^2.1.1",
+    "flowbite-react": "^0.6.4",
+    "fs": "^0.0.1-security",
+    "next": "14.0.2",
+    "path": "^0.12.7",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.2"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   }
 }
